--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Premier Commit</h1>
+<body bgcolor="red">
+    <h1>2eme Commit</h1>
 </body>
 </html>
